--- a/views/listings/newform.ejs
+++ b/views/listings/newform.ejs
@@ -1,7 +1,7 @@
 <% layout('/layouts/boilerplate') -%>
 <body>
   <h2 id="newplace-heading">New Place</h2>
-  <form action="/listing" method="post" novalidate class="needs-validation">
+  <form action="/listings" method="post" novalidate class="needs-validation">
     <div class="newform-field">
       <label for="title">Title</label>
       <input type="text" name="listing[title]" id="title" required />
