--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -6,37 +6,56 @@
     <h4> &#8377 <%= a.price.toLocaleString("en-IN") %></h4>
     <p>Location: <%= a.location %></p>
     <p>Country: <%= a.country %></p>
-    <button >Edit</button>
-    <button>Delete</button>
+    <button style="background-color: green; border-radius: 5px ; border: 1px solid rgb(125, 125, 125);" onclick="window.location.href='/listings/<%= a.id %>/edit'">Edit</button>
+    <button style="background-color: red; border-radius: 5px ; border: 1px solid rgb(125, 125, 125);" onclick="window.location.href='/listings/<%= a.id %>/delete'">Delete</button>
     <hr>
     <div>
+
+
         <div>
-            <h4>All Review</h4>
+            <h3 style="text-align:center">All Review</h3>
+            <div class="row">
+
+           
             <% for(review of a.reviews){ %>
-                   <li>
-                    <%= review.comment %> , <%= review.rating %>
-                    <form method="post" action="/listings/<%= a.id %>/reviews/<%= review._id %>">
-                        <button>Delete</button>
+                   <div class="card col-4 ms-4" style="border: 1px solid black !important;">
+                    <div class="card-body">
+<h5 class="card-title">
+Kavya Rajput
+</h5>
+<p class="card-text">
+    <%= review.comment %>
+</p>
+<p class="card-text">
+    Rating:<%= review.rating %>
+</p>
+    
+                   <form method="post" action="/listings/<%= a.id %>/reviews/<%= review._id %>">
+                        <button class="btn btn-danger btn-sm ">Delete</button>
                     </form>
-                   </li>   
+                </div>
+                </div>   
          <%  } %>
-            <p> <%= a.review %></p>
         </div>
+        </div>
+
+
+
         <hr>
-        <h4>Create a Review</h4>
+        <h3 style="text-align:center">Create a Review</h3>
         <form action="/listings/<%= a.id %>/reviews" novalidate  method="post">
             <div>
                 <label for="rating" class="form-range">Rating</label>
-                <input type="range" name="reviews[rating]" id="rating" min="1" max="5">
+                <input type="range" name="reviews[rating]" id="rating" min="1" max="5" >
             </div>
             <div>
                 <label for="comment">Comments</label>
-               <textarea name="reviews[comment]" required  id="comment" cols="30" rows="10"></textarea>
+               <textarea name="reviews[comment]" required  id="comment" cols="30" rows="10" style="min-height: 150px;"></textarea>
             </div>
             <button>Add Review</button>
         </form>
-        <hr>
+        <hr> 
     </div>
-
-   
+    
+    
 </body>
