login and signup page created

--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,5 +1,6 @@
 <% layout('/layouts/boilerplate') -%>
 <body>
+  <%= success %>
   <h1 class="heading">All Listings</h1>
 
   <div class="card d-flex flex-row flex-wrap justify-content-between">
