--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -12,11 +12,12 @@
 
 </head>
 <body>
-    <%- include("../includes/navbar")  %>
+    <%- include("../includes/navbar.ejs")  %>
     <div class="container">
+        <%- include("../includes/flash.ejs")  %>
         <%- body %>
     </div>
-    <%- include("../includes/footer")  %>
+    <%- include("../includes/footer.ejs")  %>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
      <script src="/javaScript/script.js"></script>
 </body>
