added controllers acc to MVC framework

--- a/public/CSS/listing.css
+++ b/public/CSS/listing.css
@@ -11,6 +11,8 @@
 }
 .Place-img{
     width:400px;
+        height: 300px !important;
+        border-radius: 10px;
 }
 #listing-title{
      text-align: center;
