--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,6 +1,6 @@
 <% layout('/layouts/boilerplate') -%>
 <body>
-  <%= success %>
+ 
   <h1 class="heading">All Listings</h1>
 
   <div class="card d-flex flex-row flex-wrap justify-content-between">
@@ -15,18 +15,24 @@
             <p id="listing-title">
               <%= listing.title %>
             </p>
-
+            <p><%= listing.owner.username %></p>
             <p id="listing-price">&#8377 <%= listing.price.toLocaleString("en-IN") %>/night</p>
-            <div class="card-buttons">
-              <form action="/listings/<%= listing._id %>/edit" method="get">
-                <button>Edit</button>
-              </form>
 
-              <form action="/listings/<%= listing._id %>/delete" method="get">
-                <button>Delete</button>
-              </form>
-            </div>
+            <% if(currentUser && currentUser._id.equals(listing.owner._id)) { %>
+              <div class="card-buttons">
+                  <form action="/listings/<%= listing._id %>/edit" method="get">
+                      <button>Edit</button>
+                  </form>
+          
+                  <form action="/listings/<%= listing._id %>/delete" method="get">
+                      <button>Delete</button>
+                  </form>
+              </div>
+          <% } %>
+            
+
           </div>
+
         </div>
       </a>
     <% } %>
