--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -1,33 +1,27 @@
 <% layout('/layouts/boilerplate') -%>
 <body>
     <h2 class="col-6 offset-3 text-center" >Sign up Page</h2>
-    <div class="col-6 offset-3">
-
-   
- 
-  <form action="/signup" method="post" novalidate class="needs-validation">
+  <form action="/signup" method="post" novalidate class="needs-validation col-6 offset-3">
     <div class="newform-field">
       <label for="email">Email</label>
-      <input type="text" name="signup[email]" id="email" required />
+      <input type="text" name="email" id="email" required />
       <div class="valid-feedback">Title Looks good!</div>
       <div class="invalid-feedback">Please choose a Title.</div>
     </div>
 
     <div class="newform-field">
         <label for="username">UserName</label>
-        <input type="text" name="signup[username]" id="username" required />
+        <input type="text" name="username" id="username" required />
         <div class="valid-feedback">Title Looks good!</div>
         <div class="invalid-feedback">Please choose a Title.</div>
       </div>
 
       <div class="newform-field">
         <label for="password">Password</label>
-        <input type="password" name="signup[password]" id="password" required />
+        <input type="password" name="password" id="password" required />
         <div class="valid-feedback">Title Looks good!</div>
         <div class="invalid-feedback">Please choose a Title.</div>
       </div>  
-
     <button class="add-btn" type="submit">SIGN UP</button>
   </form>
-</div>
 </body>
