--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,8 +1,129 @@
 <% layout('/layouts/boilerplate') -%>
 <body>
- 
-  <h1 class="heading">All Listings</h1>
+ <style>
+  .filter{
+    margin-top: 2rem;
+    /* background-color: rgb(221, 255, 0); */
+    text-align: center;
+    margin-right: 2rem;
+    opacity: 0.7;
+  }
+  .filter:hover{
+    opacity: 1;
+    cursor: pointer;
+  }
+  .filter p{
+   font-size: 0.8rem;
+  }
+  #filters{
+    display: flex;
+    flex-wrap: wrap;
+     /* background-color: red; */
+    /* margin-top: 20px; */ 
+  }
 
+  .tax-toggle{
+    margin-top: 1.5rem;
+    border:1px solid rgb(183, 183, 183);
+    border-radius: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 5px;
+    font-size: 1rem;
+  }
+  .tax-toggle:hover{
+    border-color: rgb(0, 0, 0);
+  }
+  .tax-info{
+    display: none;
+  }
+ </style>
+  <!-- <h1 class="heading">All Listings</h1> -->
+<div id="filters">
+<div class="filter">
+<i class="fa-solid fa-fire"></i>
+<p>Trending</p>
+</div>
+<div class="filter">
+  <i class="fa-solid fa-bed"></i>
+  <p>Rooms</p>
+  </div>
+  <div class="filter">
+    <i class="fa-solid fa-landmark"></i>
+    <p>Historical landmark</p>
+    </div>
+    <div class="filter">
+      <i class="fa-solid fa-umbrella-beach"></i>
+      <p>Beach</p>
+      </div>
+      <div class="filter">
+        <i class="fa-solid fa-snowflake"></i>
+        <p>Arctic</p>
+        </div>  
+        <div class="filter">
+          <i class="fa-solid  fa-mountain"></i>
+          <p>Mountain</p>
+          </div>
+
+          <div class="filter">
+          <i class="fa-solid fa-sailboat"></i>
+          <p>Boats</p>
+        </div>
+
+        <div class="filter">
+        <i class="fa-solid fa-palette"></i>
+        <p>Creative spaces</p>
+      </div>
+
+
+      <!-- <div class="filter">
+      <i class="fa-solid fa-person-skiing"></i>
+      <p>Ski-in/out</p>
+    </div> -->
+    <!-- <div class="filter">
+    <i class="fa-solid fa-building"></i>
+    <p>Iconic cities</p>
+  </div> -->
+  <!-- <div class="filter">
+  <i class="fa-solid fa-mountain-sun"></i>
+  <p>Amazing views</p>
+  </div> -->
+
+  <!-- <div class="filter">
+    <i class="fa-brands fa-fort-awesome"></i>
+    <p>Castel</p>
+    </div> -->
+
+    <div class="filter">
+      <i class="fa-solid fa-person-swimming"></i>
+      <p>Amazing pools</p>
+      </div>
+
+      <div class="filter">
+        <i class="fa-solid fa-cow"></i>
+        <p>Farms</p>
+        </div>   
+        <div class="filter">
+          <i class="fa-solid fa-tent"></i>
+        <p>Camping</p>
+      </div> 
+
+      <div class="filter">
+        <i class="fa-solid fa-caravan"></i>
+        <p>Caravan</p>
+      </div> 
+      
+      <div class="tax-toggle">
+<div class="form-check-reverse form-switch">
+  <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault" role="switch">
+  <label class="form-check-label" for="flexSwitchCheckDefault">Show taxes and fees</label>
+</div>
+      </div>
+
+
+
+</div>
   <div class="card d-flex flex-row flex-wrap justify-content-between">
     <% for (let listing of result) { %>
       <a href="/listings/<%=listing._id%>" class="text-decoration-none">
@@ -16,7 +137,7 @@
               <%= listing.title %>
             </p>
             <p><%= listing.owner.username %></p>
-            <p id="listing-price">&#8377 <%= listing.price.toLocaleString("en-IN") %>/night</p>
+            <p id="listing-price">&#8377 <%= listing.price.toLocaleString("en-IN") %>/night <i class="tax-info">+18% GST</i></p>
 
             <% if(currentUser && currentUser._id.equals(listing.owner._id)) { %>
               <div class="card-buttons">
@@ -38,4 +159,38 @@
     <% } %>
   </div>
 </body>
+
+<script>
+let taxSwitch= document.getElementById("flexSwitchCheckDefault");
+taxSwitch.addEventListener('click', ()=>{
+  let taxInfo = document.getElementsByClassName("tax-info");
+for(info of taxInfo){
+  if(info.style.display != "inline"){
+    info.style.display =  "inline";
+  }else{
+    info.style.display =  "none";
+  }
+
+}})
+</script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
