--- a/views/listings/newform.ejs
+++ b/views/listings/newform.ejs
@@ -1,21 +1,21 @@
 <% layout('/layouts/boilerplate') -%>
-<body>
+<body style="margin-bottom: 120px;">
   <h2 id="newplace-heading">New Place</h2>
-  <form action="/listings" method="post" novalidate class="needs-validation" enctype="multipart/form-data">
+  <form action="/listings" method="post" novalidate class="needs-validation" class="newform" enctype="multipart/form-data" >
     <div class="newform-field">
       <label for="title">Title</label>
-      <input type="text" name="listing[title]" id="title" required />
+      <input type="text" name="listing[title]" id="title" required class="form-control"/>
       <div class="valid-feedback">Title Looks good!</div>
       <div class="invalid-feedback">Please choose a Title.</div>
     </div>
-    <div class="newform-field">
+    <div class="newform-field" >
       <label for="image">Upload Image</label>
-      <input type="file" name="listing[image]" id="image"/>
+      <input type="file" name="listing[image]" id="image" class="form-control"/>
     </div>
 
 <div class="newform-field">
   <label for="category">Select Category</label>
-  <select name="listing[category]" id="category" required>
+  <select name="listing[category]" id="category" required class="form-select">
     <option value="">Select Category</option>
     <option value="Beach">Beach</option>
     <option value="Arctic">Arctic</option>
@@ -42,13 +42,13 @@
     <div class="newform-field">
       <label for="description">Description</label>
       <textarea
-      style="min-height: 25px;"
+     
+      class="form-control"
         name="listing[description]"
-        cols="30"
-        rows="5"
+        rows="3"
         id="description"
         required
-        minlength="50"
+
       ></textarea>
       <div class="valid-feedback">Discription Looks good!</div>
       <div class="invalid-feedback">Please add valid Discription.</div>
@@ -56,26 +56,28 @@
 
     <div class="newform-field">
       <label for="price">Price</label>
-      <input type="text" id="price" name="listing[price]" required />
+      <input type="text" id="price" name="listing[price]" required class="form-control"/>
       <div class="valid-feedback">Price is valid</div>
       <div class="invalid-feedback">Please add valid Price.</div>
     </div>
 
     <div class="newform-field">
       <label for="location">Location</label>
-      <input type="text" name="listing[location]" id="location" required />
+      <input type="text" name="listing[location]" id="location" required class="form-control"/>
       <div class="valid-feedback">Valid location!</div>
       <div class="invalid-feedback">Please add Valid Location.</div>
     </div>
 
     <div class="newform-field">
       <label for="country">Country</label>
-      <input type="text" name="listing[country]" id="country" required />
+      <input type="text" name="listing[country]" id="country" required class="form-control"/>
       <div class="valid-feedback">Country Looks valid!</div>
       <div class="invalid-feedback">Please choose a country.</div>
     </div>
-
-    <button class="add-btn" type="submit">ADD</button>
+<div class="text-center mt-4">
+  <button class="add-btn" type="submit">ADD</button>
+</div>
+   
   </form>
 </body>
 <!-- <script src="/JavaScript/script.js"></script> -->
