--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -3,22 +3,22 @@
     <h2 class="col-6 offset-3 text-center" >Sign up Page</h2>
   <form action="/signup" method="post" novalidate class="needs-validation col-6 offset-3">
     <div class="newform-field">
-      <label for="email">Email</label>
-      <input type="text" name="email" id="email" required />
+      <label for="email" class="form-label">Email</label>
+      <input type="text" name="email" id="email" required class="form-control"/>
       <div class="valid-feedback">Title Looks good!</div>
       <div class="invalid-feedback">Please choose a Title.</div>
     </div>
 
     <div class="newform-field">
-        <label for="username">UserName</label>
-        <input type="text" name="username" id="username" required />
+        <label for="username" class="form-label">UserName</label>
+        <input type="text" name="username" id="username" required class="form-control" />
         <div class="valid-feedback">Title Looks good!</div>
         <div class="invalid-feedback">Please choose a Title.</div>
       </div>
 
       <div class="newform-field">
-        <label for="password">Password</label>
-        <input type="password" name="password" id="password" required />
+        <label for="password" class="form-label">Password</label>
+        <input type="password" name="password" id="password" required class="form-control" />
         <div class="valid-feedback">Title Looks good!</div>
         <div class="invalid-feedback">Please choose a Title.</div>
       </div>  
