--- a/public/CSS/listing.css
+++ b/public/CSS/listing.css
@@ -3,19 +3,17 @@
     background-color: rgb(175, 225, 238, 250);
     font-size: 46px;
     margin-top: 10px;
-
 }
-
 .wrapper:hover{
   opacity: 0.7;
 }
 .Place-img{
-    width:400px;
-        height: 300px !important;
+    width:480px;
+        height: 350px !important;
         border-radius: 10px;
 }
 #listing-title{
-     text-align: center;
+     /* text-align: center; */
     color: black;
     font-size: 1.3rem;
     /* background-color: palegreen; */
@@ -23,9 +21,34 @@
    
 }
 #listing-price{
-    text-align: center;
+    /* text-align: center; */
    color: black;
    font-size: 1rem;
    /* background-color: pink; */
+   margin: 0px 0px 2px 0px;
    
 }
+
+@media screen and (max-width: 550px) {
+    .Place-img{
+        width:360px;
+            height: 240px !important;
+    }
+    }
+    
+    @media screen and (max-width: 380px) {
+        .Place-img{
+            width:250px;
+                height: 200px !important;
+                border-radius: 10px;
+        }
+    }
+    
+    
+    @media screen and (max-width: 280px) {
+        .Place-img{
+            width:150px;
+                height: 120px !important;
+                border-radius: 10px;
+        }
+    }
