--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -1,3 +1,4 @@
+
 .fa-airbnb{
     color: rgb(255, 75, 87);
     font-size: 40px;
@@ -5,6 +6,11 @@
 .footer{
   background-color: rgb(223, 223, 223);
   padding: 5px 0px 10px 0px;
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: auto;
 }
 
 .footer-info-links a{
@@ -15,30 +21,76 @@
     gap:20px !important;
 }
 
-.card{
+.card-container{
     /* background-color: rgb(165, 38, 81) !important; */
-    border: none !important;
     margin-top: 20px !important;
+    margin-bottom: 100px !important;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+.card-container a{
+    width: 380px !important;
 }
 
 .wrapper{
-    background-color: rgb(192, 236, 255);
+    /* background-color: rgb(192, 236, 255); */
     margin: 10px 0px;
     margin-bottom: 30px;
     border-radius: 10px;
+    width: 100%;
 }
 .card-img{
     width: 380px !important;
     height: 280px !important;
-    border-radius: 10px;
+    border-radius: 10px 10px 10px 10px !important;
+
 }
 
-.card-buttons{
-    display: flex;
-    width: 100%;
-    justify-content: space-around;
+@media screen and (max-width: 990px) {
+    .card-container{
+        justify-content: center;
+    }}
+
+@media screen and (max-width: 550px) {
+.card-container{
+    justify-content: center;
 }
-.card-buttons button{
-   padding: 5px 30px;
-   border-radius: 5px;
+
+    .card-container a{
+        width: 300px !important;
+    }
+    .card-img{
+        width: 300px !important;
+        height: 200px !important;
+    }
+}
+
+@media screen and (max-width: 380px) {
+    .card-container{
+        justify-content: center;
+    }
+    .card-container a{
+        width: 270px !important;
+        
+    }
+    .card-img{
+        width: 270px !important;
+        height: 200px !important;
+    }
+}
+
+
+@media screen and (max-width: 280px) {
+    .card-container{
+        justify-content: center;
+    }
+    .card-container a{
+        width: 220px !important;
+    }
+    .card-img{
+        width: 220px !important;
+        height: 180px !important;
+    }
 }
