--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -13,9 +13,8 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div
-      class="collapse navbar-collapse"
+      class="collapse navbar-collapse justify-content-between"
       id="navbarSupportedContent"
-      style="display: flex; justify-content: space-between"
     >
       <ul class="navbar-nav mb-2 mb-lg-0">
         <li class="nav-item">
