--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,20 +1,18 @@
 <% layout('/layouts/boilerplate') -%>
 <body>
     <h2 class="col-6 offset-3 text-center" >Login Page</h2>
-    <div class="col-6 offset-3">
+    <div class="col-8 offset-3">
 
-   
- 
   <form action="/login" method="post" novalidate class="needs-validation">
 
     <div class="newform-field">
-        <label for="username">UserName</label>
-        <input type="text" name="username" id="username" required />
+        <label for="username" class="form-label">UserName</label>
+        <input type="text" name="username" id="username" required  class="form-control"/>
       </div>
 
       <div class="newform-field">
-        <label for="password">Password</label>
-        <input type="password" name="password" id="password" required />
+        <label for="password" class="form-label">Password</label>
+        <input type="password" name="password" id="password" required class="form-control"/>
       </div>  
 
     <button class="add-btn" type="submit">SIGN UP</button>
